src/parser.output
Terminals unused in grammar

   ADDR
   ADDR_ACCESS


State 33 conflicts: 26 shift/reduce
State 86 conflicts: 20 reduce/reduce
State 87 conflicts: 20 reduce/reduce
State 122 conflicts: 20 reduce/reduce
State 133 conflicts: 20 reduce/reduce


Grammar

    0 $accept: Input $end

    1 Input: /* empty */
    2      | Input Statements

    3 Loop: FOR P_LEFT Expression EXPR_END Expression EXPR_END Expression P_RIGHT Unit
    4     | WHILE P_LEFT Expression P_RIGHT Unit
    5     | LOOP Unit

    6 Condition: IF P_LEFT Expression P_RIGHT Unit
    7          | IF P_LEFT Expression P_RIGHT Statement
    8          | Condition ELSE IF P_LEFT Expression P_RIGHT Unit
    9          | Condition ELSE IF P_LEFT Expression P_RIGHT Statement
   10          | Condition ELSE Unit
   11          | Condition ELSE Statement

   12 Function: FUNCTION P_LEFT P_RIGHT Unit
   13         | FUNCTION P_LEFT Param_list P_RIGHT Unit

   14 Param_list: IDENTIFIER
   15           | Param_list COMMA IDENTIFIER

   16 Param_call_list: Expression
   17                | Param_call_list COMMA Expression

   18 Unit: BRACE_LEFT Statements BRACE_RIGHT

   19 Statements: Statements Statement
   20           | Statements Unit
   21           | Statements Condition
   22           | Statements Loop
   23           | Statement
   24           | Unit
   25           | Condition
   26           | Loop

   27 Statement: EXPR_END
   28          | NEW_LINE
   29          | Expression EXPR_END
   30          | Expression NEW_LINE

   31 Expression: Expression EQUAL Expression
   32           | TYPE
   33           | NUMBER
   34           | BOOL
   35           | STRING
   36           | Expression POINT IDENTIFIER
   37           | NEW VAR IDENTIFIER
   38           | NEW ATTR IDENTIFIER
   39           | DELETE VAR IDENTIFIER
   40           | DELETE ATTR IDENTIFIER
   41           | P_LEFT Expression P_RIGHT
   42           | NEW Expression P_LEFT Param_call_list P_RIGHT
   43           | NEW Expression P_LEFT P_RIGHT
   44           | Expression P_LEFT Param_call_list P_RIGHT
   45           | Expression P_LEFT P_RIGHT
   46           | IDENTIFIER
   47           | VAR IDENTIFIER
   48           | ATTR IDENTIFIER
   49           | Expression POW Expression
   50           | Expression PLUS Expression
   51           | Expression MINUS Expression
   52           | Expression STAR Expression
   53           | Expression SLASH Expression
   54           | Expression DIV Expression
   55           | Expression MODULO Expression
   56           | MINUS Expression
   57           | PLUS Expression
   58           | Expression MORE Expression
   59           | Expression LESS Expression
   60           | Expression MORE_E Expression
   61           | Expression LESS_E Expression
   62           | Expression D_EQUAL Expression
   63           | Expression T_EQUAL Expression
   64           | Expression DIF Expression
   65           | Expression AND Expression
   66           | Expression OR Expression
   67           | NOT Expression
   68           | EXIST Expression
   69           | RETURN Expression
   70           | RETURN
   71           | BREAK
   72           | TYPEOF Expression
   73           | Expression IS Expression
   74           | DUMP Expression
   75           | Function


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 33
BOOL (259) 34
TYPE (260) 32
STRING (261) 35
PLUS (262) 50 57
MINUS (263) 51 56
STAR (264) 52
SLASH (265) 53
DIV (266) 54
POW (267) 49
EQUAL (268) 31
POINT (269) 36
ADDR (270)
MODULO (271) 55
MORE (272) 58
LESS (273) 59
MORE_E (274) 60
LESS_E (275) 61
AND (276) 65
OR (277) 66
NOT (278) 67
EXIST (279) 68
D_EQUAL (280) 62
T_EQUAL (281) 63
DIF (282) 64
P_LEFT (283) 3 4 6 7 8 9 12 13 41 42 43 44 45
P_RIGHT (284) 3 4 6 7 8 9 12 13 41 42 43 44 45
BRACE_LEFT (285) 18
BRACE_RIGHT (286) 18
COMMA (287) 15 17
VAR (288) 37 39 47
ATTR (289) 38 40 48
NEW (290) 37 38 42 43
DELETE (291) 39 40
TYPEOF (292) 72
IS (293) 73
IDENTIFIER (294) 14 15 36 37 38 39 40 46 47 48
FUNCTION (295) 12 13
IF (296) 6 7 8 9
ELSE (297) 8 9 10 11
FOR (298) 3
WHILE (299) 4
LOOP (300) 5
DUMP (301) 74
EXPR_END (302) 3 27 29
NEW_LINE (303) 28 30
BREAK (304) 71
RETURN (305) 69 70
POS (306)
NEG (307)
ADDR_ACCESS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Input (55)
    on left: 1 2, on right: 0 2
Loop (56)
    on left: 3 4 5, on right: 22 26
Condition (57)
    on left: 6 7 8 9 10 11, on right: 8 9 10 11 21 25
Function (58)
    on left: 12 13, on right: 75
Param_list (59)
    on left: 14 15, on right: 13 15
Param_call_list (60)
    on left: 16 17, on right: 17 42 44
Unit (61)
    on left: 18, on right: 3 4 5 6 8 10 12 13 20 24
Statements (62)
    on left: 19 20 21 22 23 24 25 26, on right: 2 18 19 20 21 22
Statement (63)
    on left: 27 28 29 30, on right: 7 9 11 19 23
Expression (64)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75, on right: 3 4 6 7 8 9 16 17 29 30 31 36 41 42
    43 44 45 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 72 73 74


State 0

    0 $accept: . Input $end

    $default  reduce using rule 1 (Input)

    Input  go to state 1


State 1

    0 $accept: Input . $end
    2 Input: Input . Statements

    $end        shift, and go to state 2
    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    BRACE_LEFT  shift, and go to state 12
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    IF          shift, and go to state 20
    FOR         shift, and go to state 21
    WHILE       shift, and go to state 22
    LOOP        shift, and go to state 23
    DUMP        shift, and go to state 24
    EXPR_END    shift, and go to state 25
    NEW_LINE    shift, and go to state 26
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Loop        go to state 29
    Condition   go to state 30
    Function    go to state 31
    Unit        go to state 32
    Statements  go to state 33
    Statement   go to state 34
    Expression  go to state 35


State 2

    0 $accept: Input $end .

    $default  accept


State 3

   33 Expression: NUMBER .

    $default  reduce using rule 33 (Expression)


State 4

   34 Expression: BOOL .

    $default  reduce using rule 34 (Expression)


State 5

   32 Expression: TYPE .

    $default  reduce using rule 32 (Expression)


State 6

   35 Expression: STRING .

    $default  reduce using rule 35 (Expression)


State 7

   57 Expression: PLUS . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 36


State 8

   56 Expression: MINUS . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 37


State 9

   67 Expression: NOT . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 38


State 10

   68 Expression: EXIST . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 39


State 11

   41 Expression: P_LEFT . Expression P_RIGHT

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 40


State 12

   18 Unit: BRACE_LEFT . Statements BRACE_RIGHT

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    BRACE_LEFT  shift, and go to state 12
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    IF          shift, and go to state 20
    FOR         shift, and go to state 21
    WHILE       shift, and go to state 22
    LOOP        shift, and go to state 23
    DUMP        shift, and go to state 24
    EXPR_END    shift, and go to state 25
    NEW_LINE    shift, and go to state 26
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Loop        go to state 29
    Condition   go to state 30
    Function    go to state 31
    Unit        go to state 32
    Statements  go to state 41
    Statement   go to state 34
    Expression  go to state 35


State 13

   47 Expression: VAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 42


State 14

   48 Expression: ATTR . IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 15

   37 Expression: NEW . VAR IDENTIFIER
   38           | NEW . ATTR IDENTIFIER
   42           | NEW . Expression P_LEFT Param_call_list P_RIGHT
   43           | NEW . Expression P_LEFT P_RIGHT

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 44
    ATTR        shift, and go to state 45
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 46


State 16

   39 Expression: DELETE . VAR IDENTIFIER
   40           | DELETE . ATTR IDENTIFIER

    VAR   shift, and go to state 47
    ATTR  shift, and go to state 48


State 17

   72 Expression: TYPEOF . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 49


State 18

   46 Expression: IDENTIFIER .

    $default  reduce using rule 46 (Expression)


State 19

   12 Function: FUNCTION . P_LEFT P_RIGHT Unit
   13         | FUNCTION . P_LEFT Param_list P_RIGHT Unit

    P_LEFT  shift, and go to state 50


State 20

    6 Condition: IF . P_LEFT Expression P_RIGHT Unit
    7          | IF . P_LEFT Expression P_RIGHT Statement

    P_LEFT  shift, and go to state 51


State 21

    3 Loop: FOR . P_LEFT Expression EXPR_END Expression EXPR_END Expression P_RIGHT Unit

    P_LEFT  shift, and go to state 52


State 22

    4 Loop: WHILE . P_LEFT Expression P_RIGHT Unit

    P_LEFT  shift, and go to state 53


State 23

    5 Loop: LOOP . Unit

    BRACE_LEFT  shift, and go to state 12

    Unit  go to state 54


State 24

   74 Expression: DUMP . Expression

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    Function    go to state 31
    Expression  go to state 55


State 25

   27 Statement: EXPR_END .

    $default  reduce using rule 27 (Statement)


State 26

   28 Statement: NEW_LINE .

    $default  reduce using rule 28 (Statement)


State 27

   71 Expression: BREAK .

    $default  reduce using rule 71 (Expression)


State 28

   69 Expression: RETURN . Expression
   70           | RETURN .  [STAR, SLASH, DIV, POW, EQUAL, POINT, MODULO, MORE, LESS, MORE_E, LESS_E, AND, OR, D_EQUAL, T_EQUAL, DIF, P_RIGHT, COMMA, IS, EXPR_END, NEW_LINE]

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    DUMP        shift, and go to state 24
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    $default  reduce using rule 70 (Expression)

    Function    go to state 31
    Expression  go to state 56


State 29

   26 Statements: Loop .

    $default  reduce using rule 26 (Statements)


State 30

    8 Condition: Condition . ELSE IF P_LEFT Expression P_RIGHT Unit
    9          | Condition . ELSE IF P_LEFT Expression P_RIGHT Statement
   10          | Condition . ELSE Unit
   11          | Condition . ELSE Statement
   25 Statements: Condition .  [$end, NUMBER, BOOL, TYPE, STRING, PLUS, MINUS, NOT, EXIST, P_LEFT, BRACE_LEFT, BRACE_RIGHT, VAR, ATTR, NEW, DELETE, TYPEOF, IDENTIFIER, FUNCTION, IF, FOR, WHILE, LOOP, DUMP, EXPR_END, NEW_LINE, BREAK, RETURN]

    ELSE  shift, and go to state 57

    $default  reduce using rule 25 (Statements)


State 31

   75 Expression: Function .

    $default  reduce using rule 75 (Expression)


State 32

   24 Statements: Unit .

    $default  reduce using rule 24 (Statements)


State 33

    2 Input: Input Statements .  [$end, NUMBER, BOOL, TYPE, STRING, PLUS, MINUS, NOT, EXIST, P_LEFT, BRACE_LEFT, VAR, ATTR, NEW, DELETE, TYPEOF, IDENTIFIER, FUNCTION, IF, FOR, WHILE, LOOP, DUMP, EXPR_END, NEW_LINE, BREAK, RETURN]
   19 Statements: Statements . Statement
   20           | Statements . Unit
   21           | Statements . Condition
   22           | Statements . Loop

    NUMBER      shift, and go to state 3
    BOOL        shift, and go to state 4
    TYPE        shift, and go to state 5
    STRING      shift, and go to state 6
    PLUS        shift, and go to state 7
    MINUS       shift, and go to state 8
    NOT         shift, and go to state 9
    EXIST       shift, and go to state 10
    P_LEFT      shift, and go to state 11
    BRACE_LEFT  shift, and go to state 12
    VAR         shift, and go to state 13
    ATTR        shift, and go to state 14
    NEW         shift, and go to state 15
    DELETE      shift, and go to state 16
    TYPEOF      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    FUNCTION    shift, and go to state 19
    IF          shift, and go to state 20
    FOR         shift, and go to state 21
    WHILE       shift, and go to state 22
    LOOP        shift, and go to state 23
    DUMP        shift, and go to state 24
    EXPR_END    shift, and go to state 25
    NEW_LINE    shift, and go to state 26
    BREAK       shift, and go to state 27
    RETURN      shift, and go to state 28

    NUMBER      [reduce using rule 2 (Input)]
    BOOL        [reduce using rule 2 (Input)]
    TYPE        [reduce using rule 2 (Input)]
    STRING      [reduce using rule 2 (Input)]
    PLUS        [reduce using rule 2 (Input)]
    MINUS       [reduce using rule 2 (Input)]
    NOT         [reduce using rule 2 (Input)]
    EXIST       [reduce using rule 2 (Input)]
    P_LEFT      [reduce using rule 2 (Input)]
    BRACE_LEFT  [reduce using rule 2 (Input)]
    VAR         [reduce using rule 2 (Input)]
    ATTR        [reduce using rule 2 (Input)]
    NEW         [reduce using rule 2 (Input)]
    DELETE      [reduce using rule 2 (Input)]
    TYPEOF      [reduce using rule 2 (Input)]
    IDENTIFIER  [reduce using rule 2 (Input)]
    FUNCTION    [reduce using rule 2 (Input)]
    IF          [reduce using rule 2 (Input)]
    FOR         [reduce using rule 2 (Input)]
    WHILE       [reduce using rule 2 (Input)]
    LOOP        [reduce using rule 2 (Input)]
    DUMP        [reduce using rule 2 (Input)]
    EXPR_END    [reduce using rule 2 (Input)]
    NEW_LINE    [reduce using rule 2 (Input)]
    BREAK       [reduce using rule 2 (Input)]
    RETURN      [reduce using rule 2 (Input)]
    $default    reduce using rule 2 (Input)

    Loop        go to state 58
    Condition   go to state 59
    Function    go to state 31
    Unit        go to state 60
    Statement   go to state 61
    Expression  go to state 35


State 34

   23 Statements: Statement .

    $default  reduce using rule 23 (Statements)


State 35

   29 Statement: Expression . EXPR_END
   30          | Expression . NEW_LINE
   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   73           | Expression . IS Expression

    PLUS      shift, and go to state 62
    MINUS     shift, and go to state 63
    STAR      shift, and go to state 64
    SLASH     shift, and go to state 65
    DIV       shift, and go to state 66
    POW       shift, and go to state 67
    EQUAL     shift, and go to state 68
    POINT     shift, and go to state 69
    MODULO    shift, and go to state 70
    MORE      shift, and go to state 71
    LESS      shift, and go to state 72
    MORE_E    shift, and go to state 73
    LESS_E    shift, and go to state 74
    AND       shift, and go to state 75
    OR        shift, and go to state 76
    D_EQUAL   shift, and go to state 77
    T_EQUAL   shift, and go to state 78
    DIF       shift, and go to state 79
    P_LEFT    shift, and go to state 80
    IS        shift, and go to state 81
    EXPR_END  shift, and go to state 82
    NEW_LINE  shift, and go to state 83


State 36

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   57           | PLUS Expression .  [PLUS, MINUS, STAR, SLASH, DIV, POW, EQUAL, MODULO, MORE, LESS, MORE_E, LESS_E, AND, OR, D_EQUAL, T_EQUAL, DIF, P_RIGHT, COMMA, IS, EXPR_END, NEW_LINE]
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   73           | Expression . IS Expression

    POINT   shift, and go to state 69
    P_LEFT  shift, and go to state 80

    $default  reduce using rule 57 (Expression)


State 37

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   56           | MINUS Expression .  [PLUS, MINUS, STAR, SLASH, DIV, POW, EQUAL, MODULO, MORE, LESS, MORE_E, LESS_E, AND, OR, D_EQUAL, T_EQUAL, DIF, P_RIGHT, COMMA, IS, EXPR_END, NEW_LINE]
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   73           | Expression . IS Expression

    POINT   shift, and go to state 69
    P_LEFT  shift, and go to state 80

    $default  reduce using rule 56 (Expression)


State 38

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   67           | NOT Expression .  [PLUS, MINUS, STAR, SLASH, DIV, POW, EQUAL, MODULO, MORE, LESS, MORE_E, LESS_E, AND, OR, D_EQUAL, T_EQUAL, DIF, P_RIGHT, COMMA, IS, EXPR_END, NEW_LINE]
   73           | Expression . IS Expression

    POINT   shift, and go to state 69
    P_LEFT  shift, and go to state 80

    $default  reduce using rule 67 (Expression)


State 39

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   68           | EXIST Expression .  [PLUS, MINUS, STAR, SLASH, DIV, POW, EQUAL, MODULO, MORE, LESS, MORE_E, LESS_E, AND, OR, D_EQUAL, T_EQUAL, DIF, P_RIGHT, COMMA, IS, EXPR_END, NEW_LINE]
   73           | Expression . IS Expression

    POINT   shift, and go to state 69
    P_LEFT  shift, and go to state 80

    $default  reduce using rule 68 (Expression)


State 40

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   41           | P_LEFT Expression . P_RIGHT
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   73           | Expression . IS Expression

    PLUS     shift, and go to state 62
    MINUS    shift, and go to state 63
    STAR     shift, and go to state 64
    SLASH    shift, and go to state 65
    DIV      shift, and go to state 66
    POW      shift, and go to state 67
    EQUAL    shift, and go to state 68
    POINT    shift, and go to state 69
    MODULO   shift, and go to state 70
    MORE     shift, and go to state 71
    LESS     shift, and go to state 72
    MORE_E   shift, and go to state 73
    LESS_E   shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    D_EQUAL  shift, and go to state 77
    T_EQUAL  shift, and go to state 78
    DIF      shift, and go to state 79
    P_LEFT   shift, and go to state 80
    P_RIGHT  shift, and go to state 84
    IS       shift, and go to state 81


State 41

   18 Unit: BRACE_LEFT Statements . BRACE_RIGHT
   19 Statements: Statements . Statement
   20           | Statements . Unit
   21           | Statements . Condition
   22           | Statements . Loop

    NUMBER       shift, and go to state 3
    BOOL         shift, and go to state 4
    TYPE         shift, and go to state 5
    STRING       shift, and go to state 6
    PLUS         shift, and go to state 7
    MINUS        shift, and go to state 8
    NOT          shift, and go to state 9
    EXIST        shift, and go to state 10
    P_LEFT       shift, and go to state 11
    BRACE_LEFT   shift, and go to state 12
    BRACE_RIGHT  shift, and go to state 85
    VAR          shift, and go to state 13
    ATTR         shift, and go to state 14
    NEW          shift, and go to state 15
    DELETE       shift, and go to state 16
    TYPEOF       shift, and go to state 17
    IDENTIFIER   shift, and go to state 18
    FUNCTION     shift, and go to state 19
    IF           shift, and go to state 20
    FOR          shift, and go to state 21
    WHILE        shift, and go to state 22
    LOOP         shift, and go to state 23
    DUMP         shift, and go to state 24
    EXPR_END     shift, and go to state 25
    NEW_LINE     shift, and go to state 26
    BREAK        shift, and go to state 27
    RETURN       shift, and go to state 28

    Loop        go to state 58
    Condition   go to state 59
    Function    go to state 31
    Unit        go to state 60
    Statement   go to state 61
    Expression  go to state 35


State 42

   47 Expression: VAR IDENTIFIER .

    $default  reduce using rule 47 (Expression)


State 43

   48 Expression: ATTR IDENTIFIER .

    $default  reduce using rule 48 (Expression)


State 44

   37 Expression: NEW VAR . IDENTIFIER
   47           | VAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 86


State 45

   38 Expression: NEW ATTR . IDENTIFIER
   48           | ATTR . IDENTIFIER

    IDENTIFIER  shift, and go to state 87


State 46

   31 Expression: Expression . EQUAL Expression
   36           | Expression . POINT IDENTIFIER
   42           | NEW Expression . P_LEFT Param_call_list P_RIGHT
   43           | NEW Expression . P_LEFT P_RIGHT
   44           | Expression . P_LEFT Param_call_list P_RIGHT
   45           | Expression . P_LEFT P_RIGHT
   49           | Expression . POW Expression
   50           | Expression . PLUS Expression
   51           | Expression . MINUS Expression
   52           | Expression . STAR Expression
   53           | Expression . SLASH Expression
   54           | Expression . DIV Expression
   55           | Expression . MODULO Expression
   58           | Expression . MORE Expression
   59           | Expression . LESS Expression
   60           | Expression . MORE_E Expression
   61           | Expression . LESS_E Expression
   62           | Expression . D_EQUAL Expression
   63           | Expression . T_EQUAL Expression
   64           | Expression . DIF Expression
   65           | Expression . AND Expression
   66           | Expression . OR Expression
   73           | Expression . IS Expression
